Fixed the white border and flash when bringing up the tapback menu in dark mode

--- a/src/styles/ack-picker/AcknowledgmentPicker.scss
+++ b/src/styles/ack-picker/AcknowledgmentPicker.scss
@@ -14,6 +14,7 @@
     column-gap: 5px;
 
     background: var(--tapback-background);
+    border-radius: 25px;
 
     padding: 2.5px 7.5px;
 
